syntax = "proto3";

package proto;

option go_package = "proto/protogen"; // Output of .go files

import "google/api/annotations.proto";
import "model.proto";

service YourService {
    rpc Sample(Interface) returns (Interface){
        option (google.api.http) = {
            get: "/hello"
        };
    }
    rpc GetVersion(Interface) returns (Interface){
        option (google.api.http) = {
            get: "/v1/version"
        };
    }
}